# chef

./: README.md  pyproject.toml
src/chef/: cli.py  hook.py
src/chef/template/: prj.toml
src/chef/template/prj/: README.md  pyproject.toml
src/chef/template/prj/src/{{__target__}}/: cli.py  external.py
template/: __init__.py
template/prj/: README.md  pyproject.toml
template/prj/src/{{__target__}}/: cli.py  external.py  hook.py
