[project]
name = "{{__target__}}"
version = "0.1.0"
description = "{{description}}"
readme = "README.md"
authors = [
    { name = "{{__user__}}", email = "{{__email__}}" }
]

requires-python = ">=3.14"
dependencies = [
    "prj-gen",
]

[project.scripts]
{{__target__}} = "{{__target__}}.cli:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
prj-gen = { git = "https://github.com/kkibria/prj-gen.git" }
